Bug #7228 - improving the copy / paste of publication operation (kmelia) : On paste, prompting user when necessary... Some adjustments performed during integration process: - modifying some copy rules - adding the case of administrative copy - fixing some CSS problems (Aurore's work) - using SilverpeasError (notyError behind) instead of JavaScript alert for UI errors
Conflicts:
	kmelia/kmelia-config/src/main/config/properties/org/silverpeas/kmelia/multilang/kmeliaBundle.properties
	kmelia/kmelia-config/src/main/config/properties/org/silverpeas/kmelia/multilang/kmeliaBundle_de.properties
	kmelia/kmelia-config/src/main/config/properties/org/silverpeas/kmelia/multilang/kmeliaBundle_en.properties
	kmelia/kmelia-config/src/main/config/properties/org/silverpeas/kmelia/multilang/kmeliaBundle_fr.properties
	kmelia/kmelia-ejb/src/main/java/com/silverpeas/component/kmelia/KmeliaCopyDetail.java
	kmelia/kmelia-ejb/src/main/java/com/silverpeas/component/kmelia/KmeliaPaste.java
	kmelia/kmelia-ejb/src/main/java/com/stratelia/webactiv/kmelia/control/ejb/KmeliaBm.java
	kmelia/kmelia-ejb/src/main/java/com/stratelia/webactiv/kmelia/control/ejb/KmeliaBmEJB.java
	kmelia/kmelia-war/src/main/java/com/stratelia/webactiv/kmelia/control/KmeliaSessionController.java
	kmelia/kmelia-war/src/main/java/com/stratelia/webactiv/kmelia/servlets/KmeliaRequestRouter.java
	kmelia/kmelia-war/src/main/java/com/stratelia/webactiv/kmelia/servlets/ajax/handlers/PasteHandler.java

--- a/infoletter/infoletter-war/src/main/webapp/infoLetter/jsp/styleSheets/infoLetter.css
+++ b/infoletter/infoletter-war/src/main/webapp/infoLetter/jsp/styleSheets/infoLetter.css
@@ -27,9 +27,6 @@
 }
 
 #infoFieldset .field {
-  clear: both;
-  display: block;
-  float: none;
   width: 98%;
 }
 
